--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+<title>A Brief Test</title>
 <body>
 <h1>hey man</h1>
+<p>I mostly just want to see what this does. 
+I have no idea what it's capable of but I think I can build something out of it.
+I guess we'll find out.</p>
+
+<p>What happens if I insert an extra paragraph like this?</p> 
 </body>
 </html>
