--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>A Brief Test</title>
 <body>
 <h1>hey man</h1>
@@ -7,6 +7,8 @@
 I have no idea what it's capable of but I think I can build something out of it.
 I guess we'll find out.</p>
 
-<p>What happens if I insert an extra paragraph like this?</p> 
+<p>What happens if I insert an extra paragraph like this?</p>
+
+<p title="tooltip test I guess">Haha butts</p>
 </body>
 </html>
