--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ I guess we'll find out.</p>
 
 <p>What happens if I insert an extra paragraph like this?</p>
 
-<p title="tooltip test I guess">Haha butts</p>
+<p title="Haha butts">Tooltip test I guess</p>
 </body>
 </html>
