--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@ I guess we'll find out.</p>
 <p title="Haha butts">Tooltip test I guess mouse over me to see some SHIT</p>
 
 <h2 style="font-size:80px;">bepis</h2>
+
+<hr>
+<p>Yo what I can put LINES and shit</p>
+<hr>
+<p>bruh</p>
+<hr>
+<p>BRUUUH</p>
 </body>
 </html>
