--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ I guess we'll find out.</p>
 
 <p title="Haha butts">Tooltip test I guess mouse over me to see some SHIT</p>
 
-<h2 style="font-size:80px;">bepis</h2>
+<h2 title="this is bepis too" style="font-size:80px;">bepis</h2>
 
 <hr>
 <p>Yo what I can put LINES and shit</p>
