--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>A Brief Test</title>
-<body>
-<h1>hey man</h1>
-<p>I mostly just want to see what this does. 
+<body style="background-color:black;">
+<h1 style="color:rgb(150,150,150);">hey man</h1>
+<p style="color:rgb(150,150,150);">I mostly just want to see what this does. 
 I have no idea what it's capable of but I think I can build something out of it.
 I guess we'll find out.</p>
 
-<p>What happens if I insert an extra paragraph like this?</p>
+<p style="color:rgb(150,150,150);">What happens if I insert an extra paragraph like this?</p>
 
-<p title="Haha butts">Tooltip test I guess mouse over me to see some SHIT</p>
+<p title="Haha butts" style="color:rgb(150,150,150);">Tooltip test I guess mouse over me to see some SHIT</p>
 
-<h2 title="this is bepis too" style="font-size:80px;">bepis</h2>
+<h2 title="this is bepis too" style="color:rgb(150,150,150)" style="font-size:80px;">bepis</h2>
 
 <hr>
-<p>Yo what I can put LINES and shit</p>
+<p style="color:rgb(150,150,150);">Yo what I can put LINES and shit</p>
 <hr>
-<p>bruh</p>
+<p style="color:rgb(150,150,150);">bruh</p>
 <hr>
-<p>BRUUUH</p>
+<p style="color:rgb(150,150,150);">BRUUUH</p>
 </body>
 </html>
