--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ I guess we'll find out.</p>
 
 <p title="Haha butts" style="color:rgb(150,150,150);">Tooltip test I guess mouse over me to see some SHIT</p>
 
-<h2 title="this is bepis too" style="color:rgb(150,150,150) font-size:80px;">bepis</h2>
+<h2 title="this is bepis too" style="color:rgb(150,150,150)" "font-size:80px;">bepis</h2>
 
 <hr>
 <p style="color:rgb(150,150,150);">Yo what I can put LINES and shit</p>
