--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title title="You're in for some great shit";>Welome to Tev's Big Bullshit Bamboozleria</title>
+<title>Welome to Tev's Big Bullshit Bamboozleria</title>
 <body style="background-color:black;">
 <h1 style="color:rgb(150,150,150);">hey man</h1>
 <p style="color:rgb(150,150,150);">I mostly just want to see what this does. 
