--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Welome to Tev's Big Bullshit Bamboozleria</title>
 <body style="background-color:black;">
 <h1 style="color:rgb(150,150,150);">hey man</h1>
