--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head meta name="viewport" content="width=device-width,initial-scale=1.0">
+<style>
+body {background-color:black;}
+p {color:reg(150,150,150);}
+</style>
 <title>Welome to Tev's Big Bullshit Bamboozleria</title>
 <body style="background-color:black;">
 <h1 style="color:rgb(150,150,150);">hey man</h1>
-<p style="color:rgb(150,150,150);">I mostly just want to see what this does. 
+<p>I mostly just want to see what this does. 
 I have no idea what it's capable of but I think I can build something out of it.
 I guess we'll find out.</p>
 
-<p style="color:rgb(150,150,150);">What happens if I insert an extra paragraph like this?</p>
+<p>What happens if I insert an extra paragraph like this?</p>
 
-<p title="Haha butts" style="color:rgb(150,150,150);">Tooltip test I guess mouse over me to see some SHIT</p>
+<p title="Haha butts">Tooltip test I guess mouse over me to see some SHIT</p>
 
 <h2 title="this is bepis too" style="color:rgb(150,150,150); font-size:80px">bepis</h2>
 
 <hr>
-<p style="color:rgb(150,150,150);">Yo what I can put LINES and shit</p>
+<p>Yo what I can put LINES and shit</p>
 <hr>
-<p style="color:rgb(150,150,150);">bruh</p>
+<p>bruh</p>
 <hr>
-<p style="color:rgb(150,150,150);">BRUUUH</p>
+<p>BRUUUH</p>
 
-<p style="color:rgb(150,150,150);"><del>Has anyone been so far even as decided to go want to do look more like</del> 
+<p><del>Has anyone been so far even as decided to go want to do look more like</del> 
 Stop that shit.</p>
+<br>
+<p> h </p>
 </body>
 </html>
