--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@ I guess we'll find out.</p>
 Stop that shit.</p>
 <br>
 <p style="color:rgb(150,150,150);"> h </p>
+<a href="https://github.com/" target="_blank" title="This might work?">Test URL link thing, highly professional.</a>
 </body>
 </html>
