--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@ Stop that shit.</p>
 <br>
 <p style="color:rgb(150,150,150);"> h </p>
 <a href="https://github.com/" target="_blank" style="color:rgb(150,150,150);" title="This might work?">Test URL link thing, highly professional.</a>
+<br>
+<img src="WaluigiTearsSanta.png" style="width:90px;height:90px;" alt="If you see this it didn't work.">
 </body>
 </html>
