Why do I have to do this it didn't make me do it last time

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ Stop that shit.</p>
 <a href="https://github.com/" target="_blank" style="color:rgb(150,150,150);" title="This might work?">Test URL link thing, highly professional.</a>
 <br>
 <br>
-<br>
-<img src="WaluigiTearsSanta.png" style="width:900px;height:900px;" alt="If you see this it didn't work.">
+<img src="imready.jpeg" width="500" height="530" alt="If you see this it fucked up again."
 </body>
 </html>
