--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ Stop that shit.</p>
 <a href="https://github.com/" target="_blank" style="color:rgb(150,150,150);" title="This might work?">Test URL link thing, highly professional.</a>
 <br>
 <br>
-<img src="imready.jpeg" width="500" height="530" alt="If you see this it fucked up again."
+<img src="imready.jpeg" width="500" height="530" alt="If you see this it fucked up again.">
+<br>
+<br>
+<hr>
+<p style="color:rgb(150,150,150);">I wanted to put another line so I did</p>
+
 </body>
 </html>
