--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ I guess we'll find out.</p>
 <hr>
 <p style="color:rgb(150,150,150);">bruh</p>
 <hr>
-<p style="color:rgb(150,150,150);">BRUUUH</p>
+<p style="color:rgb(150,150,150); text-align:center;">BRUUUH</p>
 
 <p style="color:rgb(150,150,150);"><del>Has anyone been so far even as decided to go want to do look more like</del> 
 Stop that shit.</p>
