--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Welome to Tev's Big Bullshit Bamboozleria</title>
 <body style="background-color:black;">
 <h1 style="color:rgb(150,150,150);">hey man</h1>
-<div style="background-image: url('imready.jpeg');">
+<div style="background-image:url('imready.jpeg'); background-position:center; background-repeat:no-repeat;">
 <p style="color:rgb(150,150,150);">I mostly just want to see what this does. 
 I have no idea what it's capable of but I think I can build something out of it.
 I guess we'll find out.</p>
