--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@ Stop that shit.</p>
 <br>
 <hr>
 <p style="color:rgb(150,150,150);">I wanted to put another line so I did</p>
-
+<br><br>
+<table style="width:100%">
+	<tr>
+		<th>The Left Column</th>
+		<th>The Middle Column</th>
+		<th>The Other Column</th>
+	</tr>
+	<tr>
+		<td><img src="dorf.png"></td>
+		<td>Damn this is tedious</td>
+		<td>EXCELSIOR</td>
+	</tr>
+</table>
 </body>
 </html>
