--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Stop that shit.</p>
 <hr>
 <p style="color:rgb(150,150,150);">I wanted to put another line so I did</p>
 <br><br>
-<table style="width:100%">
+<table style="width:100%; color:rgb(150,150,150);">
 	<tr>
 		<th>The Left Column</th>
 		<th>The Middle Column</th>
