--- a/index.html
+++ b/index.html
@@ -47,5 +47,7 @@ Stop that shit.</p>
 		<td>EXCELSIOR</td>
 	</tr>
 </table>
+<br><br>
+<p style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
 </body>
 </html>
