--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ Stop that shit.</p>
 	</tr>
 </table>
 <br><br>
-<p style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
+<p title="And the hits just keep coming" style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
 </body>
 </html>
