--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@ Stop that shit.</p>
 </table>
 <br><br>
 <p title="And the hits just keep coming" style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
+<br>
+<p style="color:rgb(150,150,150);">Alright so it seems like ALL the good shit is in CSS great</p>
 </body>
 </html>
