--- a/index.html
+++ b/index.html
@@ -50,5 +50,9 @@ Stop that shit.</p>
 <br><br>
 <p title="And the hits just keep coming" style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
 <p style="color:rgb(150,150,150);">Alright so it seems like ALL the good shit is in CSS great</p>
+<div style="background-color:blue;color=red;padding:50ps;font-size:40px;">
+	<p>Who gives a shit about the Thames when you got my Timbs</p>
+</div>
+<br>
 </body>
 </html>
