--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Stop that shit.</p>
 <br><br>
 <p title="And the hits just keep coming" style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
 <p style="color:rgb(150,150,150);">Alright so it seems like ALL the good shit is in CSS great</p>
-<div style="background-color:blue;padding:50px;font-size:40px;">
-	<p style="color=rgb(255,0,0);">Who gives a shit about the Thames when you got my Timbs</p>
+<div style="color=rgb(255,0,0);background-color:blue;padding:50px;font-size:40px;">
+	<p>Who gives a shit about the Thames when you got my Timbs</p>
 </div>
 <br>
 </body>
