--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ I guess we'll find out.</p>
 Stop that shit.</p>
 <br>
 <p style="color:rgb(150,150,150);"> h </p>
-<a href="https://github.com/" target="_blank" style="color:rgb(150,150,150);" title="This might work?">Test URL link thing, highly professional.</a>
+<a href="hah.html" target="_blank" style="color:rgb(150,150,150);" title="This might work?">Test URL link thing, highly professional.</a>
 <br>
 <br>
 <img src="imready.jpeg" width="500" height="530" alt="If you see this it fucked up again.">
