--- a/hah.html
+++ b/hah.html
@@ -8,4 +8,6 @@
 <body style="background-color:black;">
 <h1 style="color:rgb(150,150,150);">hah</h1>
 <div style="background-image:url('dorf.png'); background-position:left center; background-repeat:no-repeat;">
+<br>
+<a href="index.html" target="_self" style="color:rgb(150,150,150);" title="no">I hate it go back</a>
 </body>
