--- a/decor.html
+++ b/decor.html
@@ -10,7 +10,7 @@
 <h1>Testing Borders and Margins</h1>
 <p>Okay, here we go.</p>
 <br>
-<p>This all seems fairly simply, so lets just flood this with text to see exactly how it works when populated.</p>
+<p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
 voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
