Google Fonts Test

--- a/decor.html
+++ b/decor.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="introstyle.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>Home Decor Extravaganza</title>
