--- a/decor.html
+++ b/decor.html
@@ -8,6 +8,7 @@
 	<title>Home Decor Extravaganza</title>
 </head>
 <body>
+<img src="tevcactus.png" alt="" id="watermark">
 <h1>Testing Borders and Margins</h1>
 <p>Okay, here we go.</p>
 <p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
