--- a/decor.html
+++ b/decor.html
@@ -22,3 +22,8 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occa
 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <a href="index.html" target="_blank">Test Button</a>
+<div class="grid-container">
+	<div><a href="index.html" target="_blank">Index</a></div>
+	<div><a href="github.com" target="_blank">Github</a></div>
+	<div><a href="hah.html" target="_blank">hah</a></div>
+</div>	
