--- a/decor.html
+++ b/decor.html
@@ -25,6 +25,6 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p></p>
 <div class="grid-container">
 	<div><a href="index.html" target="_blank" style="max-width:75px">Index</a></div>
-	<div><a href="github.com" target="_blank" style="max-width:75px">Github</a></div>
+	<div><a href="https://www.github.com" target="_blank" style="max-width:75px">Github</a></div>
 	<div><a href="hah.html" target="_blank" style="max-width:75px">hah</a></div>
 </div>	
