--- a/decor.html
+++ b/decor.html
@@ -24,7 +24,7 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <a href="index.html" target="_blank">Test Button</a>
 <p></p>
 <div class="grid-container">
-	<div style="margin:auto"><a href="index.html" target="_blank">Index</a></div>
-	<div style="margin:auto"><a href="https://www.github.com" target="_blank">Github</a></div>
-	<div style="margin:auto"><a href="hah.html" target="_blank">hah</a></div>
+	<div><a href="index.html" target="_blank">Index</a></div>
+	<div><a href="https://www.github.com" target="_blank">Github</a></div>
+	<div><a href="hah.html" target="_blank">hah</a></div>
 </div>	
