Nav Bar Testing

--- a/decor.html
+++ b/decor.html
@@ -8,6 +8,11 @@
 	<title>Home Decor Extravaganza</title>
 </head>
 <body>
+<ul>
+	<li><div><a href="index.html">Home</a></div></li>
+	<li><div><a href="hah.html">hah</a></div></li>
+	<li><div><a href="https://github.com">Site</a></div></li>
+</ul>
 <h1>Testing Borders and Margins</h1>
 <p>Okay, here we go.</p>
 <p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
