--- a/decor.html
+++ b/decor.html
@@ -8,12 +8,13 @@
 	<title>Home Decor Extravaganza</title>
 </head>
 <body>
+<h1 class="header">ChiefSkittles.Github.IO</h1>
 <ul>
 	<li><div><a href="index.html">Home</a></div></li>
 	<li><div><a href="hah.html">hah</a></div></li>
 	<li><div><a href="https://github.com">Site</a></div></li>
 </ul>
-<h1>Testing Borders and Margins</h1>
+<h2>Testing Borders and Margins</h2>
 <p>Okay, here we go.</p>
 <p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
