--- a/decor.html
+++ b/decor.html
@@ -8,7 +8,7 @@
 	<title>Home Decor Extravaganza</title>
 </head>
 <body>
-<h1 class="header">ChiefSkittles.Github.IO</h1>
+<h1 class="header">ChiefSkittles.GitHub.IO</h1>
 <ul>
 	<li><div><a href="index.html">Home</a></div></li>
 	<li><div><a href="hah.html">hah</a></div></li>
