--- a/decor.html
+++ b/decor.html
@@ -27,3 +27,5 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occa
 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <a href="index.html" target="_blank">Test Button</a>
+<br>
+<footer>Test Footer, Please Do Not Break</footer>
