--- a/decor.html
+++ b/decor.html
@@ -28,4 +28,4 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <a href="index.html" target="_blank">Test Button</a>
 <br>
-<footer>Test Footer, Please Do Not Break</footer>
+<footer>Test Footer, If You Can See This It Is Working</footer>
