--- a/decor.html
+++ b/decor.html
@@ -27,5 +27,11 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occa
 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <a href="index.html" target="_blank">Test Button</a>
+<img src="bitajk.png" 
+	width="512" 
+	height="512" 
+	style="border-radius: 5px; float:left; margin:25%;" 
+	title="bitajk"
+	>
 <br>
 <footer>Test Footer, If You Can See This It Is Working</footer>
