--- a/decor.html
+++ b/decor.html
@@ -28,9 +28,9 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <a href="index.html" target="_blank">Test Button</a>
 <img src="bitajk.png" 
-	width="512" 
-	height="512" 
-	style="border-radius: 5px; float:left; margin:25%;" 
+	width="256" 
+	height="256" 
+	style="border-radius: 5px; float:left; margin:25%; display=block" 
 	title="bitajk"
 	>
 <br>
