--- a/decor.html
+++ b/decor.html
@@ -27,8 +27,8 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occa
 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <img src="bitajk.png" 
-	width="256" 
-	height="256" 
+	width="256px" 
+	height="256px" 
 	style="border-radius:5px; float:left; margin:25%; display=block" 
 	title="bitajk"
 	>
