--- a/decor.html
+++ b/decor.html
@@ -29,7 +29,7 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <img src="bitajk.png" 
 	width="256px" 
 	height="256px" 
-	style="border-radius:5px; float:left; margin:25%; display=block" 
+	style="border-radius:5px; float:left; margin:auto; display=block" 
 	title="bitajk"
 	>
 <br>
