--- a/decor.html
+++ b/decor.html
@@ -32,5 +32,11 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	style="border-radius:5px; float:left; margin-left:25%; display=block; padding-top:10px;" 
 	title="bitajk"
 	>
+<img src="panjjk.png"
+	width="256px" 
+	height="256px" 
+	style="border-radius:5px; float:left; margin-left:20px; display=block; padding-top:10px;" 
+	title="bitajk"
+	>
 <br>
 <footer>Test Footer, If You Can See This It Is Working</footer>
