--- a/decor.html
+++ b/decor.html
@@ -30,13 +30,13 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <img src="bitajk.png" 
 	width="256px" 
 	height="256px" 
-	style="border-radius:5px; float:left; margin-left:25%; display=block;" 
+	style="border-radius:5px; float:left; width:950px; margin:auto; display=block;" 
 	title="bitajk"
 	>
 <img src="panjjk.png"
 	width="256px" 
 	height="256px" 
-	style="border-radius:5px; float:left; margin-left:20px; display=block;" 
+	style="border-radius:5px; float:left; width:950px; margin:auto; display=block;" 
 	title="bitajk"
 	>
 <br>
