--- a/decor.html
+++ b/decor.html
@@ -26,17 +26,16 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
-<br>
 <img src="bitajk.png" 
 	width="256px" 
 	height="256px" 
-	style="border-radius:5px; float:left; width:950px; margin:auto; display=block;" 
+	style="border-radius:5px; float:left; margin-left:25%; display=block; padding-top:10px;" 
 	title="bitajk"
 	>
 <img src="panjjk.png"
 	width="256px" 
 	height="256px" 
-	style="border-radius:5px; float:left; width:950px; margin:auto; display=block;" 
+	style="border-radius:5px; float:left; margin-left:20px; display=block; padding-top:10px;" 
 	title="bitajk"
 	>
 <br>
