--- a/decor.html
+++ b/decor.html
@@ -37,7 +37,13 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	width="256px" 
 	height="256px" 
 	style="border-radius:5px; float:left; margin-left:20px; display=block;" 
-	title="bitajk"
+	title="panjjk"
+	>
+<img src="tevcactus.png"
+	width="256px" 
+	height="256px" 
+	style="border-radius:5px; float:left; margin-left:20px; display=block;" 
+	title="cactus"
 	>
 <br>
 <footer>Test Footer, If You Can See This It Is Working</footer>
