--- a/decor.html
+++ b/decor.html
@@ -30,7 +30,7 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <img src="bitajk.png" 
 	width="256px" 
 	height="256px" 
-	style="border-radius:5px; float:left; margin-left:25%; display=block; hover=0px 5px 10px 15px white;" 
+	style="border-radius:5px; float:left; margin-left:25%; display=block;" 
 	title="bitajk"
 	>
 <img src="panjjk.png"
