--- a/decor.html
+++ b/decor.html
@@ -27,23 +27,11 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occa
 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Oops.</p>
 <br>
-<img src="bitajk.png" 
-	width="256px" 
-	height="256px" 
-	style="border-radius:5px; float:left; margin-left:25%; display=block;" 
-	title="bitajk"
-	>
-<img src="panjjk.png"
-	width="256px" 
-	height="256px" 
-	style="border-radius:5px; float:left; margin-left:20px; display=block;" 
-	title="panjjk"
-	>
-<img src="tevcactus.png"
-	width="256px" 
-	height="256px" 
-	style="border-radius:5px; float:left; margin-left:20px; display=block;" 
-	title="cactus"
-	>
+
+<div class="flexbox-h">
+	<div><img src="bitajk.png"></div>
+	<div><img src="panjjk.png"></div>
+	<div><img src="tevcactus.png"></div>
+</div>
 <br>
 <footer>Test Footer, If You Can See This It Is Working</footer>
