--- a/decor.html
+++ b/decor.html
@@ -29,9 +29,9 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br>
 
 <div class="flexbox-h">
-	<div><img src="bitajk.png"></div>
-	<div><img src="panjjk.png"></div>
-	<div><img src="tevcactus.png"></div>
+	<div><img src="bitajk.png" style="height=256px; width=256px"></div>
+	<div><img src="panjjk.png" style="height=256px; width=256px"></div>
+	<div><img src="tevcactus.png" style="height=256px; width=256px"></div>
 </div>
 <br>
 <footer>Test Footer, If You Can See This It Is Working</footer>
