--- a/decor.html
+++ b/decor.html
@@ -29,7 +29,7 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br>
 
 <div class="flexbox-h">
-	<div><img src="bitajk.png" style="height=256px; width=256px"></div>
+	<div><img src="bitajk.png" height="256px" width="256px"></div>
 	<div><img src="panjjk.png" style="height=256px; width=256px"></div>
 	<div><img src="tevcactus.png" style="height=256px; width=256px"></div>
 </div>
