--- a/decor.html
+++ b/decor.html
@@ -30,8 +30,8 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <div class="flexbox-h">
 	<div><img src="bitajk.png" height="256px" width="256px"></div>
-	<div><img src="panjjk.png" style="height=256px; width=256px"></div>
-	<div><img src="tevcactus.png" style="height=256px; width=256px"></div>
+	<div><img src="panjjk.png" height="256px" width="256px"></div>
+	<div><img src="tevcactus.png" height="256px" width="256px"></div>
 </div>
 <br>
 <footer>Test Footer, If You Can See This It Is Working</footer>
