--- a/decor.html
+++ b/decor.html
@@ -9,11 +9,16 @@
 </head>
 <body>
 <h1 class="header">ChiefSkittles.GitHub.IO</h1>
-<ul>
+<h2 class="header">Thing-Maker & Word-Sayer</h2>
+
+<!-- Temporary comment-out to test double-header -->
+<!--  <ul>
 	<li><div><a href="index.html">Home</a></div></li>
 	<li><div><a href="hah.html">hah</a></div></li>
 	<li><div><a href="https://github.com">Site</a></div></li>
-</ul>
+
+</ul> -->
+
 <p>Okay, here we go.</p>
 <p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
