Making index actually the index

--- a/index.html
+++ b/index.html
@@ -1,61 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="introstyle.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<title>Welome to Tev's Big Bullshit Bamboozleria</title>
+	<title>ChiefSkittles.GitHub.io</title>
 </head>
-<body style="background-color:black;">
-<h1 style="color:rgb(150,150,150);">hey man</h1>
-<div style="background-image:url('dorf.png'); background-position:right center; background-repeat:no-repeat;">
-<p style="color:rgb(150,150,150);">I mostly just want to see what this does. 
-I have no idea what it's capable of but I think I can build something out of it.
-I guess we'll find out.</p>
+<body>
+<h1 class="header">ChiefSkittles.GitHub.io</h1>
+<h2 class="header">Thing-Maker & Word-Sayer</h2>
 
-<p style="color:rgb(150,150,150);">What happens if I insert an extra paragraph like this?</p>
+<!-- Temporary comment-out to test double-header -->
+<!--  <ul>
+	<li><div><a href="index.html">Home</a></div></li>
+	<li><div><a href="hah.html">hah</a></div></li>
+	<li><div><a href="https://github.com">Site</a></div></li>
 
-<p title="Haha butts" style="color:rgb(150,150,150);">Tooltip test I guess mouse over me to see some SHIT</p>
+</ul> -->
 
-<h2 title="this is bepis too" style="color:rgb(150,150,150); font-size:80px">bepis</h2>
+<p>Okay, here we go.</p>
+<p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+magna aliqua. Ut enim ad minim veniam,<br>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+sunt in culpa qui officia deserunt mollit anim id est laborum.
+<p>Oops.</p>
+<br>
 
-<hr>
-<p style="color:rgb(150,150,150);">Yo what I can put LINES and shit</p>
-<hr>
-<p style="color:rgb(150,150,150);">bruh</p>
-<hr>
-<p style="color:rgb(150,150,150); text-align:center;">BRUUUH</p>
-
-<p style="color:rgb(150,150,150);"><del>Has anyone ever been so far even as decided to go want to do look more like</del> 
-Stop that shit.</p>
-<br>
-<p style="color:rgb(150,150,150);"> h </p>
-<a href="hah.html" target="_self" style="color:rgb(150,150,150);" title="This might work?">Test URL link thing, highly professional.</a>
-<br>
-<br>
-<img src="imready.jpeg" width="500" height="530" alt="If you see this it fucked up again.">
-<br>
-<br>
-<hr>
-<p style="color:rgb(150,150,150);">I wanted to put another line so I did</p>
-<br><br>
-<table style="width:100%; color:rgb(150,150,150);">
-	<tr>
-		<th>The Left Column</th>
-		<th>The Middle Column</th>
-		<th>The Other Column</th>
-	</tr>
-	<tr>
-		<td><img src="dorf.png"></td>
-		<td>Damn this is tedious</td>
-		<td>EXCELSIOR</td>
-	</tr>
-</table>
-<br><br>
-<p title="And the hits just keep coming" style="color:rgb(150,150,150);">Okay so it's kind of a pain in the ass to do anything<br>meaningful with tables without getting into CSS so<br>I'll deal with that later.</p>
-<p style="color:rgb(150,150,150);">Alright so it seems like ALL the good shit is in CSS great</p>
-<div style="color:rgb(255,0,0);background-color:blue;padding:50px;font-size:40px;">
-	<p>Who gives a shit about the <span style="color:rgb(0,255,0);">Thames</span> when you got my Timbs</p>
+<div class="flexbox-h">
+	<div><img src="bitajk.png" height="256px" width="256px"></div>
+	<div><img src="panjjk.png" height="256px" width="256px"></div>
+	<div><img src="preyjk.png" height="256px" width="256px"></div>
 </div>
 <br>
-</body>
-</html>
+<footer>Test Footer, If You Can See This It Is Working</footer>
