--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
 <h1 class="header">ChiefSkittles.GitHub.io</h1>
 <h2 class="header">Thing-Maker & Word-Sayer</h2>
-
 <!-- Temporary comment-out to test double-header -->
 <!--  <ul>
 	<li><div><a href="index.html">Home</a></div></li>
@@ -18,20 +17,16 @@
 	<li><div><a href="https://github.com">Site</a></div></li>
 
 </ul> -->
-
-<p>Okay, here we go.</p>
-<p>This all seems fairly simple, so lets just flood this with text to see exactly how it works when populated.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-magna aliqua. Ut enim ad minim veniam,<br>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-sunt in culpa qui officia deserunt mollit anim id est laborum.
-<p>Oops.</p>
-<br>
-
 <div class="flexbox-h">
-	<div><img src="bitajk.png" height="256px" width="256px"></div>
-	<div><img src="panjjk.png" height="256px" width="256px"></div>
-	<div><img src="preyjk.png" height="256px" width="256px"></div>
+	<div><a href="hah.html">
+		  <img src="bitajk.png" height="450px" width="450px"></div>
+		</a>
+	<div><a href="https://github.com">
+		  <img src="panjjk.png" height="450px" width="450px"></div>
+		</a>
+	<div><a href="https://w3schools.com">
+		  <img src="preyjk.png" height="450px" width="450px"></div>
+		</a>
 </div>
 <br>
-<footer>Test Footer, If You Can See This It Is Working</footer>
+<footer>Site by Trevor "Skittles" W. | 2020</footer>
