--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 </ul> -->
 <div class="flexbox-h">
 	<div><a href="hah.html">
-		  <img src="bitajk.png" height="450px" width="450px"></div>
+		  <img src="bitajk.png" height="450px" width="450px">
 		</a>
+	</div>
 	<div><a href="https://github.com">
-		  <img src="panjjk.png" height="450px" width="450px"></div>
+		  <img src="panjjk.png" height="450px" width="450px">
 		</a>
+	</div>
 	<div><a href="https://w3schools.com">
-		  <img src="preyjk.png" height="450px" width="450px"></div>
+		  <img src="preyjk.png" height="450px" width="450px">
 		</a>
+	</div>
 </div>
 <br>
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
