--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<title>ChiefSkittles.GitHub.io</title>
+	<title>Chief Skittles - Simfiles & More</title>
 </head>
 <body>
-<h1 class="header">ChiefSkittles.GitHub.io</h1>
-<h2 class="header">Thing-Maker & Word-Sayer</h2>
+<h1 class="header">Chief Skittles on GitHub</h1>
+<h2 class="header">Chart-Writer, Word-Sayer, Thing-Doer</h2>
 <!-- Temporary comment-out to test double-header -->
 <!--  <ul>
 	<li><div><a href="index.html">Home</a></div></li>
