--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <div class="flexbox-h">
 	<div><a href="hah.html">
 		  <img src="arco.png" height="450px" width="450px">
+		  <div class="overlay">
+		    <div class="text">Simfiles</div>
+		  </div>
 		</a>
 	</div>
 	<div><a href="https://github.com">
