--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 		</a>
 	</div>
 	<div><a href="https://github.com">
+		  <p class="overlay">Simfiles</p>
 		  <img src="panjjk.png" height="450px" width="450px">
 		</a>
 	</div>
 	<div><a href="https://w3schools.com">
+		  <p class="overlay">Simfiles</p>
 		  <img src="preyjk.png" height="450px" width="450px">
 		</a>
 	</div>
