--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 </ul> -->
 <div class="flexbox-h">
 	<div><a href="hah.html">
-		  <p class="overlay">Simfiles</p>
+		  <p>Simfiles</p>
 		  <img src="arco.png" height="450px" width="450px">
 		</a>
 	</div>
 	<div><a href="https://github.com">
-		  <p class="overlay">Simfiles</p>
+		  <p>Simfiles</p>
 		  <img src="panjjk.png" height="450px" width="450px">
 		</a>
 	</div>
 	<div><a href="https://w3schools.com">
-		  <p class="overlay">Simfiles</p>
+		  <p>Simfiles</p>
 		  <img src="preyjk.png" height="450px" width="450px">
 		</a>
 	</div>
