--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="flexbox-h">
 	<div><a href="hah.html">
 		  <img src="arco.png" height="450px" width="450px">
-		  <p>Simfiles</p>
+		  <p style="text-decoration: none;">Simfiles</p>
 		</a>
 	</div>
 	<div><a href="https://github.com">
