--- a/index.html
+++ b/index.html
@@ -18,18 +18,30 @@
 
 </ul> -->
 <div class="flexbox-h">
-	<div><a href="hah.html">
-		  <img src="arco.png" height="450px" width="450px">
-		</a>
-	</div>
-	<div><a href="https://github.com">
-		  <img src="panjjk.png" height="450px" width="450px">
-		</a>
-	</div>
-	<div><a href="https://w3schools.com">
-		  <img src="preyjk.png" height="450px" width="450px">
-		</a>
-	</div>
+  <div class="container">
+    <div class="centered-text">
+      <p>Simfiles</p>
+      </div>
+      <a href="hah.html">
+        <img src="arco.png" height="450px" width="450px" />
+      </a>
+    </div>
+    <div class="container">
+      <div class="centered-text">
+        <p>Tutorials</p>
+      </div>
+      <a href="https://github.com">
+        <img src="panjjk.png" height="450px" width="450px" />
+      </a>
+    </div>
+    <div class="container">
+      <div class="centered-text">
+        <p>Youtube</p>
+      </div>
+      <a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">
+        <img src="preyjk.png" height="450px" width="450px" />
+      </a>
+    </div>
 </div>
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
 </body>
