--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
       </div>
       <div class="container">
         <div class="centered-text">
-          <p>i still haven't played this chart. sry.</p>
-        </div>
         <a href="https://github.com">
           <img src="panjjk.png" height="450px" width="450px" />
         </a>
+		<p>i still haven't played this chart. sry.</p>
+        </div>
       </div>
       <div class="container">
         <div class="centered-text">
-          <p>
-            this was the gateway drug. thought he was gonna write 210 stream
-            once. now he's writing 22s
-          </p>
-        </div>
         <a href="https://w3schools.com">
           <img src="preyjk.png" height="450px" width="450px" />
         </a>
+		<p>this was the gateway drug. thought he was gonna write 210 stream
+            once. now he's writing 22s</p>
+        </div>
       </div>
     </div>
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
