--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img src="panjjk.png" height="450px" width="450px" />
         </a>
 		<div class="centered-text">
-		<p>i still haven't played this chart. sry.</p>
+		<p>Tutorials</p>
         </div>
       </div>
       <div class="container">
@@ -40,8 +40,7 @@
           <img src="preyjk.png" height="450px" width="450px" />
         </a>
 		<div class="centered-text">
-		<p>this was the gateway drug. thought he was gonna write 210 stream
-            once. now he's writing 22s</p>
+		<p>Youtube</p>
         </div>
       </div>
     </div>
