--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>Tutorials</p>
     </div>
     <a href="https://github.com">
-      <img src="panjjk.png" height="450px" width="450px" />
+      <img src="gimp.png" height="450px" width="450px" />
     </a>
   </div>
   <div class="container">
