--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="centered-text">
       <p>Youtube</p>
     </div>
-      <a href="https://w3schools.com">
-        <img src="preyjk.png" height="450px" width="450px" />
+      <a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">
+        <img src="yout.png" height="450px" width="450px" />
       </a>
   </div>
 </div>
