Adding "Simfiles" page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="centered-text">
       <p>Simfiles</p>
     </div>
-    <a href="hah.html">
+    <a href="simfiles.html">
       <img src="arco.png" height="450px" width="450px" />
     </a>
   </div>
