--- a/simfiles.html
+++ b/simfiles.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="introstyle.css">
+	<link rel="stylesheet" type="text/css" href="simstyle.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>Simfiles</title>
 </head>
 <body>
-<h1 class="header">Simfile Packs</h1>
+<ul>
+  <li><div><a href="index.html">Home</a></div></li>
+  <li><div><a href="hah.html">hah</a></div></li>
+  <li><div><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></div></li>
+</ul>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
