Big tests on Simfiles layout

--- a/simfiles.html
+++ b/simfiles.html
@@ -14,8 +14,9 @@
   <li><div><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></div></li>
 </ul>
 <br>
-<h1 class="header">Simfile Releases</h1>
+<h1 class="header">Solo Pack Releases</h1>
 <hr>
-<p>a</p>
+<h2 class="header">Skittles Selection 5</h2>
+<h3 class="header">Feat. TS3 Highlights</h3>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
