--- a/simfiles.html
+++ b/simfiles.html
@@ -17,5 +17,8 @@
 <h1 class="header">Solo Pack Releases</h1>
 <h2 class="header">Skittles Selection 5</h2>
 <h3 class="header">Feat. TS3 Highlights</h3>
+<a href="ss5.html">
+  <img src="ss5.png" width="418px" height="164px" />
+</a>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
