--- a/simfiles.html
+++ b/simfiles.html
@@ -14,11 +14,12 @@
   <li><div><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></div></li>
 </ul>
 <br>
-<h1 class="header">Solo Pack Releases</h1>
-<h2 class="header">Skittles Selection 5</h2>
-<h3 class="header">Feat. TS3 Highlights</h3>
-<a href="ss5.html">
-  <img src="ss5.png" width="418px" height="164px" />
-</a>
+<div class="flexbox-mid">
+  <h1 class="header">Solo Pack Releases</h1>
+  <h2 class="header">Skittles Selection 5</h2>
+  <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
+  <a href="ss5.html">
+    <img src="ss5.png" width="418px" height="164px" />
+  </a>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
