Trying to seperate nav bar links and images

--- a/simfiles.html
+++ b/simfiles.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <ul>
-  <li><div><a href="index.html">Home</a></div></li>
-  <li><div><a href="hah.html">hah</a></div></li>
-  <li><div><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></div></li>
+  <li><div class="links"><a href="index.html">Home</a></div></li>
+  <li><div class="links"><a href="hah.html">hah</a></div></li>
+  <li><div class="links"><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></div></li>
 </ul>
 <br>
   <h1 class="header">Solo Pack Releases</h1>
