--- a/simfiles.html
+++ b/simfiles.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <ul>
-  <li class="links"><a href="index.html">Home</a></div></li>
-  <li class="links"><a href="hah.html">hah</a></div></li>
-  <li class="links"><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></div></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="hah.html">hah</a></li>
+  <li><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></li>
 </ul>
 <br>
   <h1 class="header">Solo Pack Releases</h1>
