--- a/simfiles.html
+++ b/simfiles.html
@@ -8,7 +8,7 @@
 	<title>Simfiles</title>
 </head>
 <body>
-<ul>
+<ul class="links">
   <li><a href="index.html">Home</a></li>
   <li><a href="hah.html">hah</a></li>
   <li><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></li>
