--- a/simfiles.html
+++ b/simfiles.html
@@ -14,6 +14,8 @@
     <li><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></li>
   </ul>
 <br>
+</body>
+<body>
   <h1 class="header">Solo Pack Releases</h1>
   <h2 class="header">Skittles Selection 5</h2>
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
@@ -22,6 +24,6 @@
       <img src="ss5.png" width="418px" height="164px" />
     </a>
   </p>
-  
+</body>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
