--- a/simfiles.html
+++ b/simfiles.html
@@ -22,6 +22,7 @@
       <img src="ss5.png" width="418px" height="164px" />
     </a>
   </p>
+  <p style="float:left">Testing text entry.</p>
 </body>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
