--- a/simfiles.html
+++ b/simfiles.html
@@ -18,11 +18,11 @@
   <h2 class="header">Skittles Selection 5</h2>
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
-    <a href="ss5.html">
+    <a style="float: left" href="ss5.html">
       <img src="ss5.png" width="418px" height="164px" />
     </a>
-  </p>
-  <p style="float: right">Testing text entry.</p>
+      Testing text entry. Testing text entry. Testing text entry.
+    </p>
 </body>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
