--- a/simfiles.html
+++ b/simfiles.html
@@ -18,8 +18,8 @@
   <h2 class="header">Skittles Selection 5</h2>
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
-    <a style="float:left;margin-right=25px;" href="ss5.html">
-      <img src="ss5.png" width="418px" height="164px" />
+    <a style="float:left;" href="ss5.html">
+      <img src="ss5.png" style="width=418px;height=164px;margin-right=25px" />
     </a>
       Testing text entry. Testing text entry. Testing text entry.
     </p>
