--- a/simfiles.html
+++ b/simfiles.html
@@ -21,10 +21,8 @@
     <a style="float:left;" href="ss5.html">
       <img src="ss5.png" style="width=418px;height=164px" />
     </a>
+	  Testing more text bullshit or something right?
     </p>
-	<p>
-	  entry text Testing.
-	</p>
 </body>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
