--- a/simfiles.html
+++ b/simfiles.html
@@ -21,10 +21,9 @@
     <a style="float:left;" href="ss5.html">
       <img src="ss5.png" style="width=418px;height=164px" />
     </a>
-	<p>
+	<p style="margin-left: 800px">
 	  What if I nested some shit inside some shit
 	</p>
-	  Testing more text bullshit or something right?
     </p>
 </body>
 
