--- a/simfiles.html
+++ b/simfiles.html
@@ -19,11 +19,9 @@
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
     <a style="float:left;" href="ss5.html">
-      <img src="ss5.png" style="width=418px;height=164px" />
+      <img src="ss5.png" style="width=418px height=164px padding-right: 25px" />
     </a>
-	<p style="margin-left: 800px">
-	  What if I nested some shit inside some shit
-	</p>
+	What if I did some crazy shit
     </p>
 </body>
 
