--- a/simfiles.html
+++ b/simfiles.html
@@ -19,9 +19,8 @@
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
     <a style="float:left;" href="ss5.html">
-      <img src="ss5.png" style="width=418px height=164px" />
+      <img src="ss5.png" style="width=418px;height=164px" />
     </a>
-	What if I did some crazy shit
     </p>
 </body>
 
