--- a/simfiles.html
+++ b/simfiles.html
@@ -18,7 +18,7 @@
   <h2 class="header">Skittles Selection 5</h2>
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
-    <a style="float:left;" href="ss5.html">
+    <a style="float:left; margin-right=50px" href="ss5.html">
       <img src="ss5.png" style="width=418px;height=164px" />
     </a>
     </p>
