--- a/simfiles.html
+++ b/simfiles.html
@@ -21,7 +21,7 @@
     <a style="float:left;" href="ss5.html">
       <img src="ss5.png" style="width=418px;height=164px;margin-right=50px" />
     </a>
-	  <p>
+	  <p style="float:right;">
 	    Sleepo beepo grungus amongus
 	  </p>
     </p>
