--- a/simfiles.html
+++ b/simfiles.html
@@ -19,9 +19,9 @@
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
     <a style="float:left;" href="ss5.html">
-      <img src="ss5.png" style="width=418px;height=164px;margin-right=50px" />
+      <img src="ss5.png" style="width=418px; height=164px; border-style=hidden; border-right=25px" />
     </a>
-	  <p style="margin-left: 450px">
+	  <p>
 	    Sleepo beepo grungus amongus
 	  </p>
     </p>
