--- a/simfiles.html
+++ b/simfiles.html
@@ -25,6 +25,11 @@
 	    Sleepo beepo grungus amongus
 		<br>
 		Lorem ipsum who the fuck needs that when you got COPY PAAAAAAAAAAAAAAAAAAAAAA actually nevermind it ddin't like that let's not do it again
+		Oh shit it liked that though fuck yeah okay that being said I need to fill this with text to make sure that line breaks and wrapping works properly
+		<br>
+		Haha I put a line break there how do you like that bitch
+		<br>
+		According to all the known laws of aviation According to all the known laws of aviation According to all the known laws of aviation According to all the known laws of aviation According to all the known laws of aviation According to all the known laws of aviation According to all the known laws of aviation According to all the known laws of aviation 
 	  </p>
     </p>
 </body>
