--- a/simfiles.html
+++ b/simfiles.html
@@ -42,6 +42,20 @@
 		According to all the known laws of aviation Oh hey it worked based
 	  </p>
     </p>
+  <h2 class="header">Skittles Selection 6</h2>
+  <h3 class="header">I'm just fuckin' throwing some shit in here</h3>
+  <p>
+    <a style="float:left;" href="ss5.html">
+      <img src="ss5.png" style="width=418px; height=164px;" />
+    </a>
+  </p>
+  <h2 class="header">Skittles Selection 6</h2>
+  <h3 class="header">ur mum</h3>
+  <p>
+    <a style="float:left;" href="ss5.html">
+      <img src="ss5.png" style="width=418px; height=164px;" />
+    </a>
+	
 </body>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
