--- a/simfiles.html
+++ b/simfiles.html
@@ -42,6 +42,28 @@
 		According to all the known laws of aviation Oh hey it worked based
 	  </p>
     </p>
+<br>
+  <h2 class="header">Skittles' Ancient Garbage</h2>
+  <h3 class="header">We all start somewhere. I started in the dumpster.</h3>
+  <p>
+    <a style="float:left;" href="ss5.html">
+      <img src="garbag.png" style="width=418px; height=164px;" />
+    </a>
+	  <p>
+	  These are all my old files. The vast majority of them are utter trash. I advise you to avoid them entirely.
+	  <br>
+	  Prior to now, I was adamant that these no longer be distributed for a large number of reasons, the most obvious
+	  of which is that they all suck. Enormously. However, enough people have asked me about seeing these that I have
+	  decided to acquiese and all them to be downloaded once again. </p>
+	  <br>
+	  <p style="font-weight: bold">
+	  IMPORTANT NOTE - I CANNOT STRESS THIS ENOUGH
+	  </p>
+	  <p>
+	  These files were all made far, far before I really got a good grip on proper charting. As such, I cannot guarantee that
+	  any of these files are synced well, flow properly, or are even fun. Again, I REALLY encourage you to play my newer files
+	  instead. I do not have the time nor the desire to return to any of these and improve any facet of them at all.
+	  </p>
 </body>
 
 <footer>Site by Trevor "Skittles" W. | 2020</footer>
