--- a/simfiles.html
+++ b/simfiles.html
@@ -47,7 +47,7 @@
   <h3 class="header">We all start somewhere. I started in the dumpster.</h3>
   <p>
     <a style="float:left;" href="ss5.html">
-      <img src="garbag.png" style="width=418px; height=164px;" />
+      <img src="garbage.png" style="width=418px; height=164px;" />
     </a>
 	  <p>
 	  These are all my old files. The vast majority of them are utter trash. I advise you to avoid them entirely.
